--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-express-crud",
+  "name": "express-test",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-react-views": "^0.10.5",
     "jsonfile": "^4.0.0",
